<resources>
    <string name="app_name">MySharedPreferences</string>
    <string name="txtCabecera">Ejemplo Shared Preferences</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtEmail">Email</string>
    <string name="btnBoton">Guardar</string>
    <string name="title_activity_login_app">LoginApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>